manifests/app/bases/example/example.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: infra-ca # TODO separate to component
  name: example
spec:
  rules:
    - host: example.app.internal # TODO apply template
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 8080
  tls:
    - hosts:
        - example.app.internal # TODO apply template
      secretName: example
